[tool.poetry]
name = "fw-gear-fhir-bundle-exporter"
version = "0.1.4"
description = "Export FHIR Bundles as json files "
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/scientific-solutions/gears/fhir-bundle-exporter"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.8"
flywheel-gear-toolkit = "^0.6"
fhir-resources = "^7.0.2"
flywheel-sdk = "^17.0.0"
pandas = "^2.0.3"
deepdiff = "^6.3.1"
fw-file = "^2.3.0"
bson = "^0.5.10"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.790"
ipython = "^8.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"